--- a/unlited-from1.html
+++ b/unlited-from1.html
@@ -6,11 +6,38 @@
 </head>
 <body>
 <table>
-    <h1 style="background-color:Red" > Sở thích của bạn </h1>
-    <form action="/action_page.php">
-        Họ và tên:
-        <input name="account" type="account"/>
-    </form>
+
 </table>
 </body>
 </html>
+<div style="width: 500px; height: 500px; background-color: aliceblue">
+    <div style="width: 500px; height: 40px; background-color: aquamarine; text-align: center">
+        <h1 style="color: blue">Đăng kí học viên</h1>
+    </div>
+    <div style="width: 500px; height: 40px">
+        <h3>Họ và tên: <input placeholder="Họ và tên" style="width: 300px"></h3>
+    </div>
+    <div style="width: 500px; height: 40px">
+        <h3>Ngày sinh: <input type="date" style="width: 300px"></h3>
+    </div>
+    <div style="width: 500px; height: 40px">
+        <h3>Giới tính:
+            <input type="radio" name="gender" value="Nam"> Nam
+            <input type="radio" name="gender" value="Nữ"> Nữ
+        </h3>
+    </div>
+    <div style="width: 500px; height: 40px">
+        <h3>Địa chỉ: <textarea placeholder="Địa chỉ" style="width: 400px"></textarea></h3>
+    </div>
+    <br>
+    <div style="width: 500px; height: 40px">
+        <h3>Lớp: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select style="width: 200px">
+            <option selected>-Chọn lớp-</option>
+            <option>Lớp 2</option>
+            <option>Lớp 3</option>
+            <option>Lớp 4</option>
+            <option>Lớp 5</option>
+            <option>Lớp 6</option>
+        </select></h3>
+    </div>
+</div>
