--- a/unlited-from1.html
+++ b/unlited-from1.html
@@ -12,7 +12,7 @@
 </html>
 <div style="width: 500px; height: 500px; background-color: aliceblue">
     <div style="width: 500px; height: 40px; background-color: aquamarine; text-align: center">
-        <h1 style="color: blue">Đăng kí học viên</h1>
+        <h1 style="color: blue">Sở thích của bạn</h1>
     </div>
     <div style="width: 500px; height: 40px">
         <h3>Họ và tên: <input placeholder="Họ và tên" style="width: 300px"></h3>
