--- a/test-1.html
+++ b/test-1.html
@@ -5,7 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-.class {
-
+<form action="http://demo.codegym.vn/6/registration_form/register.php" method="POST">
+<h3>Họ và tên:<br><input type="text" name="Họ và tên";/></h3>
+<h3>Email:<br><input type="text" name="Emai"/></h3>
+<h3>Số điện thoại:<br><input type="text" name="phone"/></h3>
+<h3>Giới tính:<br><input type="radio" name="gender" value="Nam"/>Nam<input type="radio" name="gender" value="Nữ"/>Nữ</h3>
+<h3><input type="submit" Name="Đăng ký" value="Đăng ký"/></h3>
+</form>
 </body>
 </html>
