--- a/unlited-5.html
+++ b/unlited-5.html
@@ -16,14 +16,15 @@
 <h2>Đăng ký học viên</h2>
 <h4>Họ và tên: <input type="text" style="widght: 700px"/></h4>
 <h4>Ngày sinh: <input type="text" style="height: 15px" style="widght:10%";/></h4>
-<h4>Giới tính:
+<h4>Giới tính:<div style="color:black">
     <input type="radio" name="gender" value="Nam"/> Nam
     <input type="radio" name="gender" value="Nữ"/> Nữ
+    </div>
 </h4>
-<h4>Địa chỉ:
-    <input type="text" style="height:50px"></input>
+<h4>Địa chỉ: &nbsp &nbsp
+    <input type="text" style="height:50px">
 </h4>
-<h4>Lớp: <select>
+<h4>Lớp:&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<select>
     <option>--Chọn lớp--</option>
     <option>Lớp 1</option>
     <option>Lớp 2</option>
